--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{item.name}}
-  </li>
-</ul>
+<div class="container">
+  <i class="fas fa-car"></i> 
+  <i class="fas fa-car" style="font-size:48px;"></i> 
+  <i class="fas fa-car" style="font-size:60px;color:red;"></i> 
+</div>
+
+<div class="container mt-5">
+  <ul>
+    <li class="text" *ngFor="let item of items | async">
+      {{item.name}}
+    </li>
+  </ul>
+</div>
