--- a/src/app/component/lista/lista.component.html
+++ b/src/app/component/lista/lista.component.html
@@ -1,3 +1,4 @@
-<p>
-  lista works!
-</p>
+
+<div class="alert alert-warning" role="alert" *ngFor="let item of items">
+  {{item.name}} - {{item.id}}
+</div>
