agregamos una funcion para recibir datos del formulario en conexion.service.ts

--- a/src/app/component/lista-add/lista-add.component.html
+++ b/src/app/component/lista-add/lista-add.component.html
@@ -1,3 +1,40 @@
-<p>
-  lista-add works!
-</p>
+<form>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="formGroupExampleInput">
+          Nombre Medicamento
+      </label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre Medicamento">
+    </div>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="exampleFormControlTextarea1">
+          Mecanismo de Accion
+      </label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="exampleFormControlTextarea1">
+          Modo de Administracion
+      </label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="exampleFormControlTextarea1">
+          Contraindicaciones
+      </label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="exampleFormControlTextarea1">
+          Advertencia y Precauciones
+      </label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div class="form-group" class="alert alert-warning" role="alert">
+      <label for="formGroupExampleInput2">
+          Cantidad
+      </label>
+      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Cantidad">
+    </div>
+    <button type="button" class="btn btn-warning">Agregar Medicamento</button>
+  </form>
+
