el sitio web agrega nuevo medicamento

--- a/src/app/component/lista-add/lista-add.component.html
+++ b/src/app/component/lista-add/lista-add.component.html
@@ -1,40 +1,109 @@
-<form>
-    <div class="form-group" class="alert alert-warning" role="alert">
+<form (ngSubmit)="agregar()">
+    <div
+      class="alert alert-warning" 
+      role="alert">
+      
       <label for="formGroupExampleInput">
           Nombre Medicamento
       </label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre Medicamento">
+      
+      <input 
+        type="text" 
+        class="form-control" 
+        id="formGroupExampleInput" 
+        placeholder="Nombre Medicamento" 
+        name="name"
+        [(ngModel)]="item.name"
+      >
     </div>
-    <div class="form-group" class="alert alert-warning" role="alert">
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
+      
       <label for="exampleFormControlTextarea1">
           Mecanismo de Accion
       </label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      
+      <textarea 
+        class="form-control" 
+        id="exampleFormControlTextarea1" 
+        rows="3" 
+        name="mecAccion"
+        [(ngModel)]="item.mecAccion"
+      >
+      </textarea>
     </div>
-    <div class="form-group" class="alert alert-warning" role="alert">
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
+      
       <label for="exampleFormControlTextarea1">
           Modo de Administracion
       </label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      
+      <textarea 
+        class="form-control" 
+        id="exampleFormControlTextarea1" 
+        rows="3" 
+        name="modAdministracion"
+        [(ngModel)]="item.modAdministracion"  
+      >
+      </textarea>
     </div>
-    <div class="form-group" class="alert alert-warning" role="alert">
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
       <label for="exampleFormControlTextarea1">
           Contraindicaciones
       </label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      
+      <textarea 
+        class="form-control" 
+        id="exampleFormControlTextarea1" 
+        rows="3" 
+        name="contraindicaciones"
+        [(ngModel)]="item.contraindicaciones"
+      >
+      </textarea>
     </div>
-    <div class="form-group" class="alert alert-warning" role="alert">
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
       <label for="exampleFormControlTextarea1">
           Advertencia y Precauciones
       </label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      
+      <textarea 
+        class="form-control" 
+        id="exampleFormControlTextarea1" 
+        rows="3" 
+        name="advertenciaPrecauciones"
+        [(ngModel)]="item.advertenciaPrecauciones"  
+      >
+      </textarea>
     </div>
-    <div class="form-group" class="alert alert-warning" role="alert">
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
+
       <label for="formGroupExampleInput2">
           Cantidad
       </label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Cantidad">
+      
+      <input 
+        type="text" 
+        class="form-control" 
+        id="formGroupExampleInput2" 
+        placeholder="Cantidad" 
+        name="cantidad"
+        [(ngModel)]="item.cantidad"
+      >
     </div>
-    <button type="button" class="btn btn-warning">Agregar Medicamento</button>
+    <button type="submit" class="btn btn-warning">Agregar Medicamento</button>
   </form>
 
