el sitio web agrega nuevo medicamento 2

--- a/src/app/component/lista-add/lista-add.component.html
+++ b/src/app/component/lista-add/lista-add.component.html
@@ -99,7 +99,7 @@
         type="text" 
         class="form-control" 
         id="formGroupExampleInput2" 
-        placeholder="Cantidad" 
+        placeholder="0" 
         name="cantidad"
         [(ngModel)]="item.cantidad"
       >
