agregamos funcion al botton eliminar y podemos eliminar un registro

--- a/src/app/component/lista-add/lista-add.component.html
+++ b/src/app/component/lista-add/lista-add.component.html
@@ -96,7 +96,7 @@
       </label>
       
       <input 
-        type="text" 
+        type="number" 
         class="form-control" 
         id="formGroupExampleInput2" 
         placeholder="0" 
