adicionamos campos para poder mostrar el precio y tambien modificarlo

--- a/src/app/component/lista-add/lista-add.component.html
+++ b/src/app/component/lista-add/lista-add.component.html
@@ -92,6 +92,24 @@
       role="alert">
 
       <label for="formGroupExampleInput2">
+          Precio
+      </label>
+      
+      <input 
+        type="number" 
+        class="form-control" 
+        id="formGroupExampleInput2" 
+        placeholder="0" 
+        name="precio"
+        [(ngModel)]="item.precio"
+      >
+    </div>
+
+    <div 
+      class="alert alert-warning" 
+      role="alert">
+
+      <label for="formGroupExampleInput2">
           Cantidad
       </label>
       
