--- a/src/app/component/lista/lista.component.html
+++ b/src/app/component/lista/lista.component.html
@@ -7,7 +7,7 @@
 
 
 <div class="card border-primary mb-3" style="max-width: 33rem;" *ngFor="let item of items">
-  <div class="card-header">12{{item.name}}</div>
+  <div class="card-header">{{item.name}}</div>
   <div class="card-body text-primary">
     <h5 class="card-title">{{item.name}}</h5>
     <h4 class="card-title">Mecanismo de accion</h4>
